# vision_tracking

./: .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: test.yml
backend/: main.py  pyproject.toml
backend/api/: algorithm.py  compare.py  tracking.py  worker.py
backend/core/: config.py  jobs.py  worker_registry.py
backend/services/: detector.py  eval_dataset.py  metrics.py
backend/services/reid/: __init__.py  embedder.py
backend/services/trackers/: __init__.py  association.py  base.py  bytetrack.py  custom.py  deepsort.py  hungarian.py  iou.py  kalman.py  registry.py  sort.py
backend/tests/: test_api.py  test_bytetrack.py  test_custom.py  test_deepsort.py  test_hungarian.py  test_iou.py  test_kalman.py  test_metrics.py  test_metrics_motmetrics.py  test_smoke.py  test_sort.py
datasets/: README.md
datasets/MOT17_yolo/: data.yaml  summary.json
docs/: BLOG_DRAFT.md  TECHNICAL_DESIGN.md  _generated_benchmark.md  _generated_benchmark_dancetrack.md  _generated_benchmark_yolo.md
docs/notebooks/: 01_kalman_derivation.md  02_metrics.md
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
gpu-worker/: README.md  requirements.txt  start.sh  worker.py
runpod-worker/: Dockerfile  README.md  handler.py  requirements.txt
scripts/: benchmark.py  eval.py  infer_detections.py  prepare_dancetrack.py  prepare_dataset.py  rebenchmark_yolo.sh  render_demo.py  render_side_by_side.py  run_stress_test.py  train_yolo.py
(+275 files in other folders)
