[project]
name = "tracker-lab-backend"
version = "0.1.0"
description = "Multi-object tracking research backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "Pillow>=10.4",
    "ultralytics>=8.3",
    "onnxruntime>=1.20",
    "torch>=2.4",
    "torchvision>=0.19",
    "websockets>=13.1",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "py-motmetrics>=1.4",
    "jupyter>=1.1",
    "matplotlib>=3.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: integration test requiring downloaded datasets / heavy deps",
]
